force-app/main/default/objects/Event_Registration_Sub_Group__c/Event_Registration_Sub_Group__c.object-meta.xml
<CustomObject>
    <label>Event Registration Sub Group</label>
    <nameField>
        <displayFormat>ERSG-{0000000000}</displayFormat>
        <label>Event Registration Sub Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registration Sub Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>