force-app/main/default/objects/Event_Registration_Sub_Group__c/fields/Add_participants_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Add_participants_reminder_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this checkbox is checked, a reminder email is sent to the group leader.</inlineHelpText>
    <label>Add participants reminder sent</label>
    <type>Checkbox</type>
</CustomField>