force-app/main/default/objects/Event_Registration_Sub_Group__c/fields/Event_Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Group__c</fullName>
    <label>Event Registration Group</label>
    <referenceTo>Event_Registration_Group__c</referenceTo>
    <relationshipLabel>Event Registration Sub Groups</relationshipLabel>
    <relationshipName>Event_Registration_Sub_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>