force-app/main/default/objects/Event_Registration_Sub_Group__c/fields/Group_Leader_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Leader_Last_Name__c</fullName>
    <formula>Event_Registration_Group__r.Contact__r.LastName</formula>
    <label>Group Leader Last Name</label>
    <type>Text</type>
</CustomField>