force-app/main/default/objects/Event_Registration_Sub_Group__c/fields/Group_Leader_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Group_Leader_Salutation__c</fullName>
    <formula>TEXT(Event_Registration_Group__r.Contact__r.Salutation)</formula>
    <label>Group Leader Salutation</label>
    <type>Text</type>
</CustomField>