force-app/main/default/objects/Event_Registration_Sub_Group__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Locked for adding new participants or change existing participants</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>