force-app/main/default/objects/Event_Registration_Sub_Group__c/fields/Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <label>Reminder Email</label>
    <type>Text</type>
</CustomField>